# vse-platform

./: .gitignore  CLAUDE.md  CMakeLists.txt  SPRINT4_PLAN.md  VSE_AI_Team.md  VSE_Architecture_Review.md  VSE_Change_Log.md  VSE_CrossValidation_Prompt.md  VSE_Dashboard.html  VSE_Design_Spec.md  VSE_Overview.md  VSE_Session_Summary.md  VSE_Sprint_Status.json  VSE_Sprite_Spec.md  simtower_reverse_engineering_prompt.md
.github/workflows/: ai-review.yml  build.yml  deploy-dashboard.yml
.openclaw/: workspace-state.json
assets/config/: game_config.json
assets/data/: balance.json
build-release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  TowerTycoon  cmake_install.cmake  compile_commands.json
build-release/tests/: CTestTestfile.cmake  Makefile  TowerTycoonTests-b12d07c_include.cmake  TowerTycoonTests-b12d07c_tests.cmake  cmake_install.cmake
build-win/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build-win/tests/: CTestTestfile.cmake  Makefile  TowerTycoonTests-b12d07c_include.cmake  cmake_install.cmake
build3/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build3/tests/: CTestTestfile.cmake  Makefile  TowerTycoonTests-b12d07c_include.cmake  cmake_install.cmake
cmake/: FetchDependencies.cmake
dist-win/assets/config/: game_config.json
docs/: Sprint5_Plan.md
include/core/: Bootstrapper.h  ConfigManager.h  ContentRegistry.h  Error.h  EventBus.h  GameStateManager.h  IAgentSystem.h  IEconomyEngine.h  IGridSystem.h  IRenderCommand.h  ISaveLoad.h  ITransportSystem.h  InputTypes.h  SimClock.h  Types.h
include/domain/: AgentSystem.h  EconomyEngine.h  GameOverSystem.h  GridSystem.h  SaveLoadSystem.h  StarRatingSystem.h  TenantSystem.h  TransportSystem.h
include/renderer/: AnimationSystem.h  AudioEngine.h  BuildCursor.h  BuildModeState.h  Camera.h  DayNightCycle.h  DebugPanel.h  ElevatorRenderer.h  FontManager.h  HUDPanel.h  InputMapper.h  RenderFrameCollector.h  SDLRenderer.h  SaveLoadPanel.h  SpriteSheet.h  TileRenderer.h
reports/: QA_Sprint6_Full_Boom4.md  SPRINT1_Final_Review_Report.md  SPRINT6_Execution_QA_Boom4_PLAN.md  SPRINT6_QA_Summary_Boom4.md  TASK-01-001-002_Review_Report.md  TASK-01-003_Review_Report.md  TASK-01-004_Review_Report.md  TASK-01-005_Review_Report.md  TASK-01-006_Review_Report.md  TASK-01-007_Report.md  TASK-01-008_Review_Report.md  TASK-01-009_Review_Report.md  TASK-02-001_Review_Claude.md  TASK-02-001_Review_GPT54.md  TASK-02-001_Review_Gemini3Flash.md  TASK-02-001_Review_Report.md  TASK-02-002_Review_DeepSeek.md  TASK-02-002_Review_GPT54.md  TASK-02-002_Review_Gemini3Flash.md  TASK-02-002_Review_Report.md  TASK-02-003_Review_Claude.md  TASK-02-003_Review_DeepSeek.md  TASK-02-003_Review_GPT54.md  TASK-02-003_Review_Gemini3Flash.md  TASK-02-003_Review_Report.md  TASK-02-004_Review_DeepSeek.md  TASK-02-004_Review_GPT54.md  TASK-02-004_Review_Gemini3Flash.md  TASK-02-004_Review_Report.md  TASK-02-005_Review_Report.md  TASK-02-006_Gemini_Review.md  TASK-02-006_Review_Report.md  TASK-02-007_Review_Report.md  TASK-02-008_Review_Report.md  TASK-02-009_Review_Report.md  TASK-03-002_DeepSeek_Review.md  TASK-03-002_GPT_Review.md  TASK-03-002_Review_Report.md  TASK-03-003-Sprite_DeepSeek_Review.md  TASK-03-003-Sprite_GPT_Review.md  (+75 more)
scripts/: generate_sprite_sheet  generate_sprite_sheet.cpp
src/: main.cpp
src/core/: Bootstrapper.cpp  ConfigManager.cpp  ContentRegistry.cpp  EventBus.cpp  GameStateManager.cpp  SimClock.cpp
src/domain/: AgentSystem.cpp  EconomyEngine.cpp  GameOverSystem.cpp  GridSystem.cpp  SaveLoadSystem.cpp  StarRatingSystem.cpp  TenantSystem.cpp  TransportSystem.cpp
src/renderer/: AnimationSystem.cpp  AudioEngine.cpp  BuildCursor.cpp  Camera.cpp  DayNightCycle.cpp  DebugPanel.cpp  ElevatorRenderer.cpp  FontManager.cpp  HUDPanel.cpp  InputMapper.cpp  RenderFrameCollector.cpp  SDLRenderer.cpp  SaveLoadPanel.cpp  SpriteSheet.cpp  TileRenderer.cpp
tasks/: TASK-01-001.md
tests/: CMakeLists.txt  PlaceholderTest.cpp  QA_Boom4_Sprint6.md  QA_Manual_Sprint6.md  QA_Plan_Sprint6_Build_Boom4.md  test_AgentElevator.cpp  test_AgentSystem.cpp  test_AudioEngine_Boom4.cpp  test_Bootstrapper.cpp  test_BuildCursor.cpp  test_Camera.cpp  test_ConfigManager.cpp  test_ContentRegistry.cpp  test_DayNightCycle_Boom4.cpp  test_DebugInfo.cpp  test_EconomyEngine.cpp  test_EconomyLoop.cpp  test_FontManager.cpp  test_GameOver.cpp  test_GameStateManager.cpp  test_GridSystem.cpp  test_HUDPanel.cpp  test_InputMapper.cpp  test_Integration.cpp  test_RenderAgent.cpp  test_RenderFrame.cpp  test_SaveLoad.cpp  test_SaveLoadPanel.cpp  test_Settlement.cpp  test_SimClock.cpp  test_Sprint4Integration.cpp  test_Sprint5Integration.cpp  test_SpriteSheet.cpp  test_StairMovement.cpp  test_StarRatingSystem.cpp  test_TenantSystem.cpp  test_TransportSystem.cpp
vse-dashboard/: VSE_Sprint_Status.json
